--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Project</title>
-    <!-- <link rel="shortcut icon" href="asdf" type="image/x-icon"> -->
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- <script src="logic.js" defer></script> -->
-<script defer src="main.js"></script></head>
-<body>
-    <p>Practicing Webpack Project</p>
-    <button id="btn">Click me</button>
-    <img src="43bb133d45bfa62ef50d.jpg" alt="pic">
-
-    <img  alt="" id="img"><!-- this img is added by js -->
-    <p>
-        this code below is recommended or standarzied code, u should do this way
-        "scripts": {
-            "build": "webpack --config webpack.prod.js",
-            "predev": "echo 'Starting server'",
-            "dev": "webpack serve --config webpack.dev.js",
-            "deploy": "git subtree push --prefix dist origin gh-pages"
-          }
-          but u can also do like this
-          "scripts": {
-            "build": "webpack --mode production",
-            "predev": "echo 'Starting server'",
-            "dev": "webpack serve",
-            "deploy": "git subtree push --prefix dist origin gh-pages"
-          }
-          this is i learn from this article -> https://www.upgrad.com/blog/introduction-to-package-json-scripts-in-node-js/
-    </p>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Webpack Project</title><script defer="defer" src="main.js"></script></head><body><p>Practicing Webpack Project</p><button id="btn">Click me</button> <img src="43bb133d45bfa62ef50d.jpg" alt="pic"> <img alt="" id="img"><p>this code below is recommended or standardized code, u should do this way<br>"scripts": &#123;<br>"build": "webpack --config webpack.prod.js",<br>"predev": "echo 'Starting server'",<br>"dev": "webpack serve --config webpack.dev.js",<br>"deploy": "git subtree push --prefix dist origin gh-pages"<br>&#125;<br>but u can also do like this<br>"scripts": &#123;<br>"build": "webpack --mode production",<br>"predev": "echo 'Starting server'",<br>"dev": "webpack serve",<br>"deploy": "git subtree push --prefix dist origin gh-pages"<br>&#125;<br>this is i learn from this article -&gt; <a href="https://www.upgrad.com/blog/introduction-to-package-json-scripts-in-node-js/">https://www.upgrad.com/blog/introduction-to-package-json-scripts-in-node-js/</a></p><div><h1>Now i successfully delted the webpack.config.js and make my own files</h1><ul><li>webpack.common.js</li><li>webpack.dev.js</li><li>webpack.prod.js</li></ul></div></body></html>
